--- a/manifest.yml
+++ b/manifest.yml
@@ -6,11 +6,12 @@
 #  Step 2 - After you have your application running you can bind to the services below as described on predix.io
 
 applications:
-  - name: Predix-HelloWorld-WebApp-<YourAppName> # Step 1: Change your application name
+  - name: Predix-HelloWorld-WebApp-mobile1 # Step 1: Change your application name
     buildpack: staticfile_buildpack 
     #path: dist
-    memory: 256M
+    memory: 64M
     stack: cflinuxfs2
+    instance: 1
 
     # Later, to Bind to services, uncomment the section below and enter the service name that you gave, e.g.
     #services:
